# ComfyUI-ShellAgent-Plugin

./: COMPLETION_REPORT.md  INTEGRATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  USAGE_GUIDE.md  VIDEO_FORMATS_GUIDE.md  pyproject.toml  simple_check.py  verify_integration.py
comfy-nodes/: input_audio.py  input_image.py  output_image.py  output_video_encrypt.py
comfyui-h264-high444/: README.md  __init__.py  high444_encode.py
web/: shellagent.js
